--- a/app/src/main/res/layout/lapor_layout.xml
+++ b/app/src/main/res/layout/lapor_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:padding="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,7 +12,8 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/nama_buku"
+                android:id="@+id/et_judul"
+                android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -33,15 +35,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/nama_buku"
+                android:layout_below="@+id/et_judul"
                 android:text="Deskripsi"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_alignParentLeft="true" />
 
             <EditText
-                android:id="@+id/nama_pengarang"
+                android:id="@+id/et_deskripsi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView4"
                 android:layout_alignParentLeft="true" />
@@ -65,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kirim"
-                android:id="@+id/button_simpan"
+                android:id="@+id/bt_kirim"
                 android:layout_below="@+id/foto"
                 android:layout_centerHorizontal="true" />
 
@@ -75,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:text="Foto Kejadian"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_below="@+id/nama_pengarang"
+                android:layout_below="@+id/et_deskripsi"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="31dp"
                 android:layout_alignParentLeft="true" />
@@ -86,7 +89,7 @@
                 android:text="Lokasi"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/textView7"
-                android:layout_below="@+id/nama_pengarang"
+                android:layout_below="@+id/et_deskripsi"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true" />
         </RelativeLayout>
