--- a/app/src/main/res/layout/primary_layout.xml
+++ b/app/src/main/res/layout/primary_layout.xml
@@ -1,53 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--<RadioGroup
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_primary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:checkedButton="@+id/linear_layout_rb">
-        <RadioButton android:id="@+id/linear_layout_rb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Linear Layout"/>
-        <RadioButton android:id="@+id/grid_layout_rb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Grid Layout"/>
-    </RadioGroup>-->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/text_row_item"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
-<!--
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:id="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/holo_blue_dark"
-        android:text="Tab Berita"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoLink="web"
-        android:textSize="15sp"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/app_name"
-        android:textColor="#000"
-        android:layout_below="@+id/textView"
-        android:textStyle="italic"/>
-</RelativeLayout>-->
