--- a/app/src/main/res/layout/dialog_ip.xml
+++ b/app/src/main/res/layout/dialog_ip.xml
@@ -2,13 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="200dp"
     android:layout_height="wrap_content">
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ip_address"
-        android:hint="IP Address"
-        android:inputType="text"
-        />
+        android:id="@+id/il_direktori"
+        android:layout_height="wrap_content" >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/direktori"
+            android:hint="Direktori"
+            android:inputType="text"
+            />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:id="@+id/il_ip"
+        android:layout_height="wrap_content" >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ip_address"
+            android:hint="IP Address"
+            android:inputType="text"
+            />
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
