--- a/app/src/main/res/layout/maps_fragment.xml
+++ b/app/src/main/res/layout/maps_fragment.xml
@@ -13,4 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <include android:layout_height="wrap_content"
+        android:layout_width="wrap_content" layout="@layout/legenda_peta"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
