--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -2,13 +2,15 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cardView"
     android:layout_margin="5dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:background="@color/white"
+        android:layout_margin="5dp">
 
         <include
             android:id="@+id/post_author_layout"
@@ -31,17 +33,22 @@
                 android:id="@+id/star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
                 android:background="?attr/selectableItemBackground"
-                android:src="@drawable/ic_action_star" />
+                android:layout_marginRight="7dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/hoax"/>
 
             <TextView
                 android:id="@+id/post_num_stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                tools:text="7" />
+                tools:text="7"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
@@ -52,6 +59,5 @@
             android:layout_below="@+id/post_author_layout"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp" />
-
     </RelativeLayout>
 </android.support.v7.widget.CardView>
