--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/darker_gray"
-    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView
         android:id="@+id/weatherCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         app:cardBackgroundColor="#ffffff">
 
         <LinearLayout
@@ -222,27 +221,12 @@
             </LinearLayout>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-    <!--<TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:id="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/holo_blue_dark"
-        android:text="Tab Cuaca"/>
+    </android.support.v7.widget.CardView>-->
+    <android.support.v7.widget.RecyclerView
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoLink="web"
-        android:textSize="15sp"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/app_name"
-        android:textColor="#000"
-        android:layout_below="@+id/textView"
-        android:textStyle="italic"/>-->
+        android:background="@color/cardview_light_background"
+        android:layout_width="match_parent"
+        android:id="@+id/recycler_weather"
+        tools:listitem="@layout/forecast_list_item"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
